added an actual cat

--- a/cats/default.erb
+++ b/cats/default.erb
@@ -1,1 +1,9 @@
-meow: <%= @message %>
+
+<%= @message %>
+   O
+      o
+
+      |\      _,,,---,,_
+      /,`.-'`'    -.  ;-;;,_
+     |,4-  ) )-,_..;\ (  `'-'
+    '---''(_/--'  `-'\_)
