--- a/cats/octocat.erb
+++ b/cats/octocat.erb
@@ -1,4 +1,7 @@
-
+<%#
+source:
+# GitHub API
+%>
                MMM.           .MMM
                MMMMMMMMMMMMMMMMMMM
                MMMMMMMMMMMMMMMMMMM
